# rushsocket

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
config/: default.toml  pusher-compat.toml
src/: lib.rs  main.rs  server.rs  state.rs  util.rs
src/adapter/: local.rs  mod.rs  namespace.rs
src/adapter/redis/: mod.rs  pubsub.rs  request_response.rs
src/app/: mod.rs  static_manager.rs
src/auth/: mod.rs
src/cache/: memory.rs  mod.rs  redis.rs
src/config/: mod.rs
src/http/: auth.rs  mod.rs
src/http/routes/: batch_events.rs  channel.rs  channel_users.rs  channels.rs  connections.rs  events.rs  health.rs  mod.rs  terminate.rs
src/metrics/: mod.rs
src/protocol/: channels.rs  error_codes.rs  messages.rs  mod.rs
src/rate_limit/: local.rs
src/webhook/: mod.rs
src/websocket/: connection.rs  lifecycle.rs  mod.rs  socket_id.rs
src/websocket/events/: client_event.rs  mod.rs  ping_pong.rs  signin.rs  subscribe.rs  unsubscribe.rs
